chore: clean up job queue control page
